my-apps/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: http
      protocol: TCP
  type: ClusterIP
