my-apps/media/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  parentRefs:
    - name: traefik-gateway-external
      namespace: traefik
      sectionName: websecure-ext
  hostnames:
    - "stream.mcmn.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 8096
          weight: 1
---  # External DNS specific for exposing argo to CF tunnel. external-dns does not support annotating gateway API + HTTP Route
apiVersion: externaldns.k8s.io/v1alpha1
kind: DNSEndpoint
metadata:
  name: jellyfin-tunnel
  namespace: jellyfin
  labels:
    external-dns: "true"
spec:
  endpoints:
    - dnsName: stream.mcmn.me
      recordType: CNAME
      targets:
        - macserv.duckdns.org
      providerSpecific:
        - name: external-dns.alpha.kubernetes.io/cloudflare-proxied
          value: "false"
